--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>Number Listening Trainer</title>
     <link rel="stylesheet" href="styles/styles_02.css" />
-    <!-- <script src="script/ui_texts.js" defer></script> -->
+    <script src="script/ui_texts.js" defer></script>
     <script src="script/script_02.js" defer></script>
   </head>
   <body>
