color has been changed

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta charset="utf-8" />
     <title>Number Listening Trainer</title>
-    <link rel="stylesheet" href="styles/styles_02.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icons/icon_512x512.png"
+    />
+    <link rel="stylesheet" href="styles/styles_03.css" />
     <script src="script/ui_texts.js" defer></script>
     <script src="script/script_02.js" defer></script>
   </head>
+
   <body>
     <div id="scroll-container" class="scroll-container">
       <h2>Number Listening Trainer</h2>
       <h5>Author: Oleksii Pokormiakho</h5>
       <div class="layout">
         <div class="top-bar">
-          <button id="defaultBtn" class="default-btn" onclick=""></button>
+          <button id="defaultBtn" class="default-btn" onclick="">🔄</button>
           <div class="top-language-wrapper">
             <label
               for="uiLangSelect"
