style modificate, default btn changed

--- a/index.html
+++ b/index.html
@@ -12,16 +12,30 @@
     />
     <link rel="stylesheet" href="styles/styles_03.css" />
     <script src="script/ui_texts.js" defer></script>
-    <script src="script/script_02.js" defer></script>
+    <script src="script/script_03.js" defer></script>
   </head>
 
   <body>
     <div id="scroll-container" class="scroll-container">
-      <h2>Number Listening Trainer</h2>
+      <h2>
+        <img
+          src="icons/icon_512x512.png"
+          alt="Icon"
+          style="
+            width: 32px;
+            height: 32px;
+            vertical-align: middle;
+            margin-right: 8px;
+          "
+        />Number Listening Trainer
+      </h2>
       <h5>Author: Oleksii Pokormiakho</h5>
       <div class="layout">
         <div class="top-bar">
-          <button id="defaultBtn" class="default-btn" onclick="">🔄</button>
+          <button id="resetSettingsBtn" class="reset-settings-btn" title="Def">
+            🔄
+          </button>
+          <!-- <button id="defaultBtn" class="default-btn" onclick="">🔄</button> -->
           <div class="top-language-wrapper">
             <label
               for="uiLangSelect"
