--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           src="icons/icon_512x512.png"
           alt="Icon"
           style="
-            width: 32px;
-            height: 32px;
+            width: 48px;
+            height: 48px;
             vertical-align: middle;
             margin-right: 8px;
           "
@@ -198,12 +198,12 @@
           </div>
         </div>
       </div>
-      <!-- <div class="developer">
+      <div id="developer" class="developer">
         <button onclick="alert(location.href);">Path</button>
         <button onclick="localStorage.clear(); alert('localStorage cleared');">
           Clear LS
         </button>
-      </div> -->
+      </div>
     </div>
   </body>
 </html>
