createGrid() has been  removed, .number-input add to html. name of icon has been changed

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="icons/icon_512x512.png"
+      href="icons/icon_NLT_512x512.png"
     />
     <link rel="stylesheet" href="styles/styles_04.css" />
     <script src="script/ui_texts.js" defer></script>
-    <script src="script/script_04.js" defer></script>
+    <script src="script/script_05.js" defer></script>
   </head>
 
   <body>
@@ -21,12 +21,12 @@
         <img
           class="title-icon"
           id="titleIcon"
-          src="icons/icon_512x512.png"
+          src="icons/icon_NLT_512x512.png"
           alt="Icon"
         />
         <div class="title-text" id="titleText">
           <h2>Number Listening Trainer<br /></h2>
-          <h6 id="version" class="version">version: 1.2.3</h6>
+          <h6 id="version" class="version">version: 1.2.4</h6>
         </div>
       </div>
       <div class="layout">
@@ -57,7 +57,336 @@
         </div>
         <div class="content-wrapper">
           <div class="block-numbers">
-            <div class="number-area" id="numberGrid"></div>
+            <div class="number-area" id="numberGrid">
+              <div class="column">
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+              </div>
+              <div class="column">
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+              </div>
+              <div class="column">
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+              </div>
+              <div class="column">
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+                <input
+                  type="text"
+                  class="number-input"
+                  readonly
+                  maxlength="2"
+                  placeholder="***"
+                  tabindex="-1"
+                />
+              </div>
+            </div>
             <div class="repeat-group">
               <span class="repeats-text" id="labelRepeatsText"></span>
               <span id="repeatLeft" class="repeat-left">1</span>
