style has been changed

--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
 
   <body>
     <div id="scroll-container" class="scroll-container">
-      <div class="titles-container" id="titlesContainer">
-        <img
-          class="title-icon"
-          id="titleIcon"
-          src="icons/icon_NLT_512x512.png"
-          alt="Icon"
-        />
-        <div class="title-text" id="titleText">
-          <h2>Number Listening Trainer<br /></h2>
-          <h6 id="version" class="version">version: 1.2.5</h6>
-        </div>
-      </div>
       <div class="layout">
+        <div class="titles-container" id="titlesContainer">
+          <img
+            class="title-icon"
+            id="titleIcon"
+            src="icons/icon_NLT_512x512.png"
+            alt="Icon"
+          />
+          <div class="title-text" id="titleText">
+            <h2>Number Listening Trainer<br /></h2>
+            <h6 id="version" class="version">version: 1.2.5</h6>
+          </div>
+        </div>
         <h5>Oleksii Pokormiakho</h5>
         <div class="setting-row" id="settingRow">
           <button class="reset-settings-btn" id="resetSettingsBtn" title="Def">
             🔄
           </button>
-          <!-- <button id="defaultBtn" class="default-btn" onclick="">🔄</button> -->
-          <div class="top-language-wrapper">
+          <div class="ui-language-wrapper" id="uiLanguageWrapper">
             <label
               for="uiLangSelect"
               id="uiLangLabel"
