change ui filename

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="icons/icon_NLT_16x16.png"
     />
     <link rel="stylesheet" href="styles/styles_05.css" />
-    <script src="script/ui_texts.js" defer></script>
+    <script src="script/ui_NLT_texts.js" defer></script>
     <script src="script/script_07.js" defer></script>
   </head>
   <!-- NLT -->
