--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
               </div>
             </div>
 
-            <div class="fullscreen-wrapper">
+            <!-- <div class="fullscreen-wrapper">
               <div class="fullscreen-group">
                 <label
                   for="fullscreenSelect"
@@ -519,7 +519,7 @@
                   <option value="1" selected>Yes</option>
                 </select>
               </div>
-            </div>
+            </div> -->
 
             <div class="language-voice-wrapper">
               <div class="language-group">
