--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="styles/styles_06.css" />
     <script src="script/ui_NLT_texts.js" defer></script>
-    <script src="script/script_08_07.js" defer></script>
+    <script src="script/script_09.js" defer></script>
   </head>
   <!-- NLT -->
   <body>
