--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- <html lang="en" class="theme-bright"> -->
+  <!-- <html lang="en" class="theme-day"> -->
+  <!-- <html lang="en" class="theme-evening"> -->
+  <!-- <html lang="en" class="theme-night"> -->
   <head>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta charset="utf-8" />
@@ -11,6 +15,7 @@
       href="./icons/icon_NLT_16x16.png"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/themes.css" />
   </head>
   <!-- NLT -->
   <body>
