--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- <html lang="en" class="theme-bright"> -->
-  <!-- <html lang="en" class="theme-day"> -->
-  <!-- <html lang="en" class="theme-evening"> -->
-  <!-- <html lang="en" class="theme-night"> -->
+<!-- <html lang="en"> -->
+<html lang="en" class="theme-yellowblue-normal">
   <head>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta charset="utf-8" />
@@ -14,8 +11,9 @@
       sizes="16x16"
       href="./icons/icon_NLT_16x16.png"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
+
     <link rel="stylesheet" href="./styles/themes.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <!-- NLT -->
   <body>
@@ -30,7 +28,7 @@
           />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.3.16</h6>
+            <h6 id="version" class="version">version: 1.3.17</h6>
           </div>
         </div>
         <h5>Oleksii Pokormiakho</h5>
@@ -441,7 +439,6 @@
                 </select>
               </div>
             </div>
-
             <div class="digit-length-count-repeat-wrapper">
               <div class="digit-length-group">
                 <label
@@ -490,7 +487,6 @@
                 </select>
               </div>
             </div>
-
             <div class="fullscreen-wrapper">
               <div class="fullscreen-group">
                 <label
@@ -505,7 +501,6 @@
                 </select>
               </div>
             </div>
-
             <div class="language-voice-wrapper">
               <div class="language-group">
                 <label
