--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./icons/icon_NLT_16x16.png"
+      href="./assets/icons/icon_NLT_16x16.png"
     />
 
-    <link rel="stylesheet" href="./styles/themes.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="assets/css/themes.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <!-- NLT -->
   <body>
@@ -23,12 +23,12 @@
           <img
             class="title-icon"
             id="titleIcon"
-            src="./icons/icon_NLT_64x64.png"
+            src="./assets/icons/icon_NLT_64x64.png"
             alt="Icon"
           />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.3.18</h6>
+            <h6 id="version" class="version">version: 1.4.0</h6>
           </div>
         </div>
         <h5>Oleksii Pokormiakho</h5>
@@ -546,7 +546,6 @@
       </div>
       <div class="scroll-bottom-space"></div>
     </div>
-    <script src="ui_NLT_texts.js" defer></script>
     <script type="module" src="app/main.js"></script>
   </body>
 </html>
