some files hase been deleted

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-yellowblue-normal">
+<html lang="en" class="theme-yellowblue-evening">
   <head>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta charset="utf-8" />
@@ -11,8 +11,8 @@
       href="./assets/icons/icon_NLT_16x16.png"
     />
 
-    <link rel="stylesheet" href="assets/css/themes.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/themes.css" />
   </head>
   <!-- NLT -->
   <body>
