arabish interface has been added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.4.11</h6>
+            <h6 id="version" class="version">version: 1.4.12</h6>
           </div>
         </div>
         <h5>Oleksii Pokormiakho</h5>
@@ -48,6 +48,7 @@
               id="uiLangSelect"
               title="Select interface language"
             >
+              <option value="ar">العربية</option>
               <option value="de">Deutsch</option>
               <option selected value="en">English</option>
               <option value="fr">Français</option>
