--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-yellowblue-evening">
+<html lang="en" class="theme-yellowblue-normal">
   <head>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta charset="utf-8" />
@@ -27,7 +27,7 @@
           />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.4.13</h6>
+            <h6 id="version" class="version">version: 1.4.14</h6>
           </div>
         </div>
         <h5>Oleksii Pokormiakho</h5>
