refactor and email

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
           />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.4.16</h6>
+            <h6 id="version" class="version">version: 1.4.17</h6>
           </div>
         </div>
-        <h5>Oleksii Pokormiakho</h5>
+        <h5>
+          <a
+            href="mailto:Oleksii.Pokormiakho.job@gmail.com"
+            style="text-decoration: none; color: inherit"
+          >
+            Oleksii Pokormiakho
+          </a>
+        </h5>
         <div class="setting-row" id="settingRow">
           <button
             class="reset-settings-btn"
