README has been fixed

--- a/index.html
+++ b/index.html
@@ -553,6 +553,6 @@
       </div>
       <div class="scroll-bottom-space"></div>
     </div>
-    <script type="module" src="app/main.js"></script>
+    <script type="module" src="app/main_NLT.js"></script>
   </body>
 </html>
