screenshot has been changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img class="title-icon" id="titleIcon" src="./assets/icons/icon_NLT_64x64.png" alt="Icon" />
           <div class="title-text" id="titleText">
             <h2>Number Listening Trainer<br /></h2>
-            <h6 id="version" class="version">version: 1.4.17</h6>
+            <h6 id="version" class="version">version 1.4.17</h6>
           </div>
         </div>
         <h5>
